разделил на файлы ,добавил подержку браузерифай

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css\main.css">
 </head>
 <body>
-    
     <div class="preloader_box">
         <img class="preloader" src="images_disaine\Spinner-2.gif" alt="">
     </div>
@@ -21,16 +20,14 @@
         <input id="country-name" type="text">
         <button id="show">Show information</button>
     </form>
-    <button id="info">Вывести информацию о всех странах</button>
-
     <p><b>Name: </b><span id="name"></span></p>
     <p><b>Region: </b><span id="region"></span></p>
     <p><b>Subregion: </b><span id="subregion"></span></p>
     <p><b>Capital: </b><span id="capital"></span></p>
     <p><b>Flag: </b><span id="flag"></span></p>
     <img class="flagImg" src="" alt="картанка флага">
-
+    <button id="info">Вывести информацию о всех странах</button>
     <script src="butstrrap\js\jquery-3.6.1.min.js"></script>
-    <script src="js\maine.js"></script>
+    <script src="js\bundle.js"></script>
 </body>
 </html>
