добавил анимацию текста

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <link rel="icon" href="images_index\myicon.ico"> -->
     <link rel="stylesheet" href="butstrrap\butstrap css\bootstrap.css"> 
     <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="font\Roboto-multy\stylesheet.css">
 </head>
 <body>
     <div class="preloader_box">
